# survival_analysis_cmapss

./: .dockerignore  .gitignore  Dockerfile  My Collection.postman_collection.json  README.md  pyproject.toml
app/: app.py
app/templates/: index.html
data/meta/: regime_map.csv  regime_stats.csv  selected_sensors.json
data/processed/: regime_stats.csv  validation_FD004.csv
logs/xgboost/: xgboost_v001.json  xgboost_v002.json
models/xgboost/: xgboost_v001.json
notebooks/: data_preprocessing.ipynb  exploratory_data_analysis.ipynb  xgboost_training.ipynb
results/xgboost/: results.csv
src/: data_loader.py  evaluate.py  inference.py  model_defination.py  preprocess.py  train.py
utils/: DataLoading.py  DataPreprocessing.py  ExploratoryDataAnalysis.py  modelEvaluation.py  version_control.py
