[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survival_analysis_cmapss"
version = "0.1.0"
description = "Survival Analysis for Turbofan Engines. Baseline implementation of RUL prediction using the NASA C-MAPSS dataset. This project leverages XGBoost for non-linear degradation modeling and includes a full-stack deployment for sensor-data tracking."
requires-python = ">=3.9"

# requirements.txt
dependencies = [
    "fastapi[standard]>=0.128.8",
    "jinja2",
    "python-multipart",
    "matplotlib>=3.9.4",
    "numpy",
    "pandas",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.uv]
package = false